# Dispatch-Algorithm

./: .gitignore  CMakeLists.txt  algorithm.VC.VC.opendb  algorithm.sln  algorithm.vcxproj  algorithm.vcxproj.filters  dispatcher.cpp  dispatcher.h  district.cpp  district.h  large.txt  main.cpp  main.h  matrix.cpp  matrix.h  munkres.h  order.cpp  order.h  out.txt  point.cpp  point.h  proc.h  proc_dynamic.h  proc_static.h  restaurant.cpp  restaurant.h  small.txt
data/: sample.txt
